--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "asset-builder": "^1.0.1",
     "browser-sync": "^2.0.1",
     "del": "^1.1.1",
+    "flightplan": "^0.6.2",
     "gulp": "^3.8.10",
     "gulp-changed": "^1.1.0",
     "gulp-concat": "^2.3.4",
