--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "owlcarousel": "1.3.x",
     "isotope": "~2.1.1",
     "pickadate": "~3.5.5",
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "jquery-ui": "~1.11.4"
   },
   "overrides": {
     "modernizr": {
@@ -59,10 +60,16 @@
       ]
     },
     "angular": {
-      "main":[
+      "main": [
         "./angular-csp.css",
         "./angular.js"
       ]
+    },
+    "jquery-ui":{
+        "main":[
+            "./jquery-ui.js",
+            "./themes/base/slider.css"
+        ]
     }
   }
 }
